--- a/helm/swingletree/templates/secret.yaml
+++ b/helm/swingletree/templates/secret.yaml
@@ -8,4 +8,6 @@ type: Opaque
 stringData: 
   swingletree.conf.yaml: {{ $config | quote }}
   gh-app.pem: {{ .Values.github_app_key | quote }}
-  
+{{- if .Values.certificates.ca.enabled }}
+  ca: {{ .Values.certificates.ca.value | quote }}
+{{ end }}
