--- a/helm/swingletree/templates/deployment-gate.yaml
+++ b/helm/swingletree/templates/deployment-gate.yaml
@@ -23,13 +23,10 @@ spec:
         - name: config
           secret:
             secretName: swingletree-config
-        - name: appkey
-          secret:
-            secretName: swingletree-config
-      {{ if .Values.imagePullSecret }}
+      {{- if .Values.imagePullSecret }}
       imagePullSecrets:
         - name: {{ .Values.imagePullSecret }}
-      {{ end }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.registry }}{{ .Values.images.gate.repo }}:{{ .Values.images.gate.version }}"
@@ -37,11 +34,21 @@ spec:
           env:
             - name: LOG_LEVEL
               value: {{ .Values.log.level }}
+            {{- if .Values.certificates.ca.enabled }}
+            - name: NODE_EXTRA_CA_CERTS
+              value: /opt/cert/ca.pem
+            {{- end }}
           volumeMounts:
             - name: config
               mountPath: /opt/gate/swingletree.conf.yaml
               subPath: swingletree.conf.yaml
               readOnly: true
+            {{- if .Values.certificates.ca.enabled }}
+            - name: config
+              mountPath: /opt/cert/ca.pem
+              subPath: ca
+              readOnly: true
+            {{- end }}
           ports:
             - name: http
               containerPort: 3000
