--- a/helm/swingletree/templates/deployment-plugin-nebula.yaml
+++ b/helm/swingletree/templates/deployment-plugin-nebula.yaml
@@ -24,13 +24,10 @@ spec:
         - name: config
           secret:
             secretName: swingletree-config
-        - name: appkey
-          secret:
-            secretName: swingletree-config
-      {{ if .Values.imagePullSecret }}
+      {{- if .Values.imagePullSecret }}
       imagePullSecrets:
         - name: {{ .Values.imagePullSecret }}
-      {{ end }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ $pluginNebula := index .Values.images "plugin-nebula" }}{{ .Values.registry }}{{ $pluginNebula.repo }}:{{ $pluginNebula.version }}"
@@ -38,11 +35,21 @@ spec:
           env:
             - name: LOG_LEVEL
               value: {{ .Values.log.level }}
+            {{- if .Values.certificates.ca.enabled }}
+            - name: NODE_EXTRA_CA_CERTS
+              value: /opt/cert/ca.pem
+            {{- end }}
           volumeMounts:
             - name: config
               mountPath: /opt/plugin-nebula/swingletree.conf.yaml
               subPath: swingletree.conf.yaml
               readOnly: true
+            {{- if .Values.certificates.ca.enabled }}
+            - name: config
+              mountPath: /opt/cert/ca.pem
+              subPath: ca
+              readOnly: true
+            {{- end }}
           ports:
             - name: http
               containerPort: 3000
