chore(compose): add scotty url env var

--- a/compose.env
+++ b/compose.env
@@ -8,3 +8,5 @@ DECK_ELASTIC_NODE=http://elastic:9200
 DECK_ELASTIC_FEATURES_DASHBOARD=true
 
 SONAR_BASE=http://sonarqube:9000/
+
+URLS_SCOTTY=http://scotty:3000
