--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -18,5 +18,5 @@ jobs:
       run: npm i
     - name: Release Codebase
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_PACKAGE_SECRET }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: npm run release
