--- a/compose/dev/compose.env
+++ b/compose/dev/compose.env
@@ -1,18 +1,30 @@
+#### GATE CONFIG
+GATE_API_TOKEN=
+
+
+#### SCOTTY CONFIG
+SCOTTY_PROVIDER=gitea
+SCOTTY_GITEA_BASE=http://gitea:3000
+SCOTTY_GITEA_TOKEN=${GITEA_TOKEN}
 SCOTTY_STORAGE_HOST=redis
 SCOTTY_GITHUB_APP_ID:${GH_APPID}
 SCOTTY_ELASTIC_ENABLED=true
 SCOTTY_ELASTIC_NODE=http://elastic:9200
-SCOTTY_GITEA_BASE=http://gitea:3000
-SCOTTY_GITEA_TOKEN=${GITEA_TOKEN}
-SCOTTY_PROVIDER=gitea
 
+#### DECK CONFIG
 DECK_ELASTIC_ENABLED=true
 DECK_ELASTIC_NODE=http://elastic:9200
 DECK_ELASTIC_FEATURES_DASHBOARD=true
 DECK_COOKIES_SECURE=true
 
+#### plugin-sonarqube
 SONAR_BASE=http://sonarqube:9000/
+SONAR_SECRET=
+SONAR_TOKEN=
 
+#### plugin-zap
+ZAP_SECRET=
+
+#### general settings
 URLS_SCOTTY=http://scotty:3000
-
 LOG_LEVEL=info
