--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -20,9 +20,7 @@ services:
     env_file: 
       - ./compose.env
     environment: []
-    #image: docker.pkg.github.com/swingletree-oss/scotty/scotty:1.1.5                        #scotty_VERSION
-    build:
-      context: ../../scotty
+    image: docker.pkg.github.com/swingletree-oss/scotty/scotty:1.1.5                        #scotty_VERSION
     restart: always
     volumes:
       - ./swingletree.conf.yaml:/opt/scotty/swingletree.conf.yaml
