chore(compose): update specifications

--- a/compose/dev/compose.env
+++ b/compose/dev/compose.env
@@ -5,9 +5,7 @@ GATE_API_TOKEN=
 #### SCOTTY CONFIG
 SCOTTY_PROVIDER=gitea
 SCOTTY_GITEA_BASE=http://gitea:3000
-SCOTTY_GITEA_TOKEN=${GITEA_TOKEN}
 SCOTTY_STORAGE_HOST=redis
-SCOTTY_GITHUB_APP_ID:${GH_APPID}
 SCOTTY_ELASTIC_ENABLED=true
 SCOTTY_ELASTIC_NODE=http://elastic:9200
 
@@ -15,7 +13,7 @@ SCOTTY_ELASTIC_NODE=http://elastic:9200
 DECK_ELASTIC_ENABLED=true
 DECK_ELASTIC_NODE=http://elastic:9200
 DECK_ELASTIC_FEATURES_DASHBOARD=true
-DECK_COOKIES_SECURE=true
+DECK_COOKIES_SECURE=false
 
 #### plugin-sonarqube
 SONAR_BASE=http://sonarqube:9000/
@@ -27,4 +25,4 @@ ZAP_SECRET=
 
 #### general settings
 URLS_SCOTTY=http://scotty:3000
-LOG_LEVEL=info
+LOG_LEVEL=debug
